03-pod-storage.yml
apiVersion: v1
kind: Pod
metadata:   
  name: storage
spec: 
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
      volumeMounts:
      - mountPath: /mnt
        name: html 
   volumes:
     - name: html
       emptyDir: {}
