05-pod-init-container.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-init
spec:
  volumes:
    - name: nginx
      emptyDir: {}
