07-side-car.yml
apiVersion: v1
kind: Pod
metadata: 
  name: side-car
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
      - name: html
        mountPath: /usr/share/nginx/html
    - name: debug
      image: docker.io/rkalluru/learnk8s:side-car-html-generator
      volumeMounts:
      - name: html
        mountPath: /mnt/html
  volumes:
    - name: html
      emptyDir: {}
