11-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-demo
  labels:
    project: demo
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.24
