12-config.yml

apiVersion: v1
kind: Pod
metadata:
  name: test-cm
spec:
  containers:
  - name: demo
    image: docker.io/rkalluru/learnk8s:rhel19-bare
