12-env.yml
apiVersion: v1
kind: Pod
metadata:
  name: env
spec:
  containers:
    - name: demo
      image: docker.io/rkalluru/learnk8s:rhel19-bare
