13-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: test
spec:
  containers:
    - name: test
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: env-from
spec:
  containers:
  - name: demo
    image: nginx
    volumeMounts:
    - name: foo
      mountPath: "/etc/foo"
      readOnly: true
    volumes: 
    - name: foo
      configMap:
        name: sample-data
