14-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: nginx
  ports:
  - port: 80 #service port
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-test
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
